# Questionaire-analysis

./: .gitignore  Basic_co_occurence.ipynb  Key_factor_correlation.ipynb  README.md  Result_analysis.ipynb  main.py  pyproject.toml  response_analysis_v2.ipynb
plots/: Sankey_role_descision_involvement
